--- a/login.html
+++ b/login.html
@@ -9,8 +9,7 @@
     <title>Internet hotspot - Acceder</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
-<body>
+  <body>
     $(if chap-id)
     <form name="sendin" action="$(link-login-only)" method="post" style="display:none">
         <input type="hidden" name="username" />
@@ -18,7 +17,6 @@
         <input type="hidden" name="dst" value="$(link-orig)" />
         <input type="hidden" name="popup" value="true" />
     </form>
-
     <script src="/md5.js"></script>
     <script>
         function doLogin() {
@@ -27,36 +25,68 @@
           document.sendin.submit();
           return false;
         }
-
     </script>
     $(endif)
-      <header class="header">
-        <div class="logos-header">
-          <img src="img/Besser.svg" alt="" class="force-logo">
-          <img src="img/Carirubana.png" alt="" class="force-logo">
-        </div>
-      </header>
-        <div class="main">
-          <div class="wrap animated fadeIn">
-            <form name="login" action="$(link-login-only)" method="post" $(if chap-id) onSubmit="return doLogin()" $(endif) class="login-form">
-              <input type="hidden" name="dst" value="$(link-orig)" />
-              <input type="hidden" name="popup" value="true" />
-              <p class="info $(if error)alert$(endif)">
-                  $(if error == "")Porfavor, ingrese con un usuario valido para poder disfrutar del internet. $(endif)
-                  $(if error)$(error)$(endif)
-              </p>
 
-              <section class="content">
-                asdjakld
-              </section>
+  <!-- Diseño -->
 
-              <input name="username" type="text" value="cliente" hidden placeholder="Username" />
-              <input name="password" type="password" value="cliente" hidden placeholder="Password" />
-              <input type="submit" value="Acceder" />
-            </form>
-            <p class="info">En alianza con <a href="http://bessersolutions.com" class="link">Besser Solutions C.A</a></p>
-        </div>
+  <header class="header">
+    <div class="logos-header">
+      <img src="img/Besser.svg" alt="" class="force-logo">
+      <img src="img/Carirubana.png" alt="" class="force-logo">
+    </div>
+  </header>
+
+  <section class="wrapper">
+    <article>
+      <form name="login" action="$(link-login-only)" method="post" $(if chap-id) onSubmit="return doLogin()" $(endif) class="card padding-4">
+        <input type="hidden" name="dst" value="$(link-orig)" />
+        <input type="hidden" name="popup" value="true" />
+        <input name="username" type="text" value="cliente" hidden placeholder="Username" />
+        <input name="password" type="password" value="cliente" hidden placeholder="Password" />
+        <input type="submit" value="Conectarse a internet" class="btn btn-success" />
+      </form>
+    </article>
+
+    <article class="card padding-4 text-center">
+      <section class="card-header">
+        <h1 class="heading-1 text-primary-500">Actualizaciones</h1>
+      </section>
+    </article>
+
+    <article class="card">
+      <img src="https://via.placeholder.com/300" alt="" class="card-img" >
+      <div class="card-content">
+        <section class="card-header">
+          <h1 class="heading-2 text-black">Noticia 1</h1>
+        </section>
+        <section class="card-body text-center">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque animi, illo dolorum ipsa a necessitatibus in odio minima, esse consequatur molestiae odit labore, nobis voluptas blanditiis eaque corrupti provident sint?
+        </section>
       </div>
-</body>
+    </article>
 
+    <article class="card">
+      <img src="https://via.placeholder.com/300" alt="" class="card-img" >
+      <div class="card-content">
+        <section class="card-header">
+          <h1 class="heading-2 text-black">Noticia 1</h1>
+        </section>
+        <section class="card-body text-center">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque animi, illo dolorum ipsa a necessitatibus in odio minima, esse consequatur molestiae odit labore, nobis voluptas blanditiis eaque corrupti provident sint?
+        </section>
+      </div>
+    </article>
+
+  </section>
+
+  <footer>
+    En alianza con <a href="http://bessersolutions.com" class="link">Besser Solutions C.A</a>
+  </footer>
+
+  </body>
 </html>
+
+
+
+
