--- a/alogin.html
+++ b/alogin.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="refresh" content="0; url=https://www.google.com/">
   <title>Internet hotspot - Sesion correcta</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,21 +18,16 @@
       </div>
     </header>
     <section>
-      <div class="card" style="width: 40%; margin: 0 auto;">
+      <div class="card padding-4 text-center">
         <div class="card-header">
           <h1 class="noticia-heading">Sesion correcta</h1>
         </div>
         <div class="card-body">
           <p>Bienvenido a la red de internet Carirubana</p>
-          <p>Ahora puedes navegar por internet.</p>
+          <p>Ahora puedes navegar por internet, ya seras redirigido</p>
         </div>
       </div>
     </section>
-    <section>
-      <h1 class="noticias-heading">Ultimas actualizaciones</h1>
-      <div class="powr-instagram-feed" id="dd1ab6a6_1653674921"></div>
-    </section>
-    <script src="https://www.powr.io/powr.js?platform=html"></script>
   </main>
 </body>
 
