--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
     </article>
 
     <article class="card">
-      <img src="https://via.placeholder.com/300" alt="" class="card-img" >
+      <img src="img/300.png" alt="" class="card-img" >
       <div class="card-content">
         <section class="card-header">
           <h1 class="heading-2 text-black">Noticia 1</h1>
@@ -67,10 +67,22 @@
     </article>
 
     <article class="card">
-      <img src="https://via.placeholder.com/300" alt="" class="card-img" >
+      <img src="img/300.png" alt="" class="card-img" >
       <div class="card-content">
         <section class="card-header">
-          <h1 class="heading-2 text-black">Noticia 1</h1>
+          <h1 class="heading-2 text-black">Noticia 2</h1>
+        </section>
+        <section class="card-body text-center">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque animi, illo dolorum ipsa a necessitatibus in odio minima, esse consequatur molestiae odit labore, nobis voluptas blanditiis eaque corrupti provident sint?
+        </section>
+      </div>
+    </article>
+
+    <article class="card">
+      <img src="img/300.png" alt="" class="card-img" >
+      <div class="card-content">
+        <section class="card-header">
+          <h1 class="heading-2 text-black">Noticia 3</h1>
         </section>
         <section class="card-body text-center">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque animi, illo dolorum ipsa a necessitatibus in odio minima, esse consequatur molestiae odit labore, nobis voluptas blanditiis eaque corrupti provident sint?
